bin/testsuite/tests/compiler/src/errors/compiler5519.swg
/*#global testerror "Err0326"

using var B: s32
*/
